--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - name: Trigger Jenkins Build
         run: |
-          curl -X POST "https://eighty-toys-hang.loca.lt/job/job1/build?token=1189b554b15f7ec783d5a465b29f2a6315"
+          curl -X POST "https://hip-mangos-listen.loca.lt/job/job1/build?token=1189b554b15f7ec783d5a465b29f2a6315"
