--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -9,6 +9,14 @@ jobs:
   trigger:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Jenkins Crumb
+        run: |
+          # Using your Jenkins username 'jpapadem' and the token '1189b554b15f7ec783d5a465b29f2a6315'
+          CRUMB=$(curl -u jpapadem:1189b554b15f7ec783d5a465b29f2a6315 "https://hip-mangos-listen.loca.lt/crumbIssuer/api/json" | jq -r '.crumb')
+          echo "JENKINS_CRUMB=$CRUMB" >> $GITHUB_ENV
+
       - name: Trigger Jenkins Build
         run: |
-          curl -X POST "https://hip-mangos-listen.loca.lt/job/job1/build?token=1189b554b15f7ec783d5a465b29f2a6315"
+          # Trigger the Jenkins job with the crumb included in the header
+          curl -X POST "https://hip-mangos-listen.loca.lt/job/job1/build?token=1189b554b15f7ec783d5a465b29f2a6315" \
+            -H "Jenkins-Crumb: $JENKINS_CRUMB"
