--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
-testpaths = tests
+testpaths = tests bank_system/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --cov=src --cov-report=html --cov-report=xml
+addopts = -v --cov=bank_system/src --cov-report=html --cov-report=xml
