--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
-testpaths = tests bank_system/tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
+testpaths = bank_system  # Direct pytest to look in the bank_system directory
+python_files = test_*.py  # Match files starting with 'test_' and ending with '.py'
+python_classes = Test*  # Match classes starting with 'Test'
+python_functions = test_*  # Match functions starting with 'test_'
 addopts = -v --cov=bank_system/src --cov-report=html --cov-report=xml
