--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -13,14 +13,14 @@ jobs:
         run: |
           # Fetch Jenkins crumb if required (some configurations disable CSRF protection)
           CRUMB=$(curl -u jpapadem:1189b554b15f7ec783d5a465b29f2a6315 \
-            "https://eager-moments-read.loca.lt/crumbIssuer/api/json" | jq -r '.crumb' || echo "")
+            "https://real-wolves-attack.loca.lt/crumbIssuer/api/json" | jq -r '.crumb' || echo "")
 
           echo "JENKINS_CRUMB=$CRUMB" >> $GITHUB_ENV
 
       - name: Trigger Jenkins Build
         run: |
           # Trigger the Jenkins job
-          RESPONSE=$(curl -X POST "https://eager-moments-read.loca.lt/job/job1/build?token=1189b554b15f7ec783d5a465b29f2a6315" \
+          RESPONSE=$(curl -X POST "https://real-wolves-attack.loca.lt/job/job1/build?token=1189b554b15f7ec783d5a465b29f2a6315" \
             -H "Jenkins-Crumb: $JENKINS_CRUMB" -w "%{http_code}" -o /dev/null)
           
           echo "Response Code: $RESPONSE"
@@ -38,7 +38,7 @@ jobs:
 
           while [ $ATTEMPTS -lt $MAX_ATTEMPTS ]; do
             JOB_STATUS=$(curl -u jpapadem:1189b554b15f7ec783d5a465b29f2a6315 \
-              "https://eager-moments-read.loca.lt/job/job1/lastBuild/api/json" | jq -r '.result')
+              "https://real-wolves-attack.loca.lt/job/job1/lastBuild/api/json" | jq -r '.result')
 
             echo "Jenkins Job Status: $JOB_STATUS"
 
