--- a/.github/workflows/jenkins.yml
+++ b/.github/workflows/jenkins.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           # Fetch Jenkins crumb if required (some configurations disable CSRF protection)
           CRUMB=$(curl -u jpapadem:11e4a4fb90eddbdeef7f24ed4cfe835924 \
-            "https://loud-cobras-repeat.loca.lt/crumbIssuer/api/json" | jq -r '.crumb' || echo "")
+            "https://yellow-turkeys-turn.loca.lt/crumbIssuer/api/json" | jq -r '.crumb' || echo "")
 
           echo "JENKINS_CRUMB=$CRUMB" >> $GITHUB_ENV
           echo "Jenkins Crumb: $CRUMB"
@@ -21,7 +21,7 @@ jobs:
       - name: Trigger Jenkins Build
         run: |
           # Trigger the Jenkins job
-          RESPONSE=$(curl -X POST "https://loud-cobras-repeat.loca.lt/job/job1/build?token=11e4a4fb90eddbdeef7f24ed4cfe835924" \
+          RESPONSE=$(curl -X POST "https://yellow-turkeys-turn.loca.lt/job/job1/build?token=11e4a4fb90eddbdeef7f24ed4cfe835924" \
             -H "Jenkins-Crumb: $JENKINS_CRUMB" -w "%{http_code}" -o /dev/null)
           
           echo "Response Code: $RESPONSE"
@@ -39,7 +39,7 @@ jobs:
 
           while [ $ATTEMPTS -lt $MAX_ATTEMPTS ]; do
             JOB_STATUS=$(curl -u jpapadem:11e4a4fb90eddbdeef7f24ed4cfe835924 \
-              "https://loud-cobras-repeat.loca.lt/job/job1/lastBuild/api/json" | jq -r '.result')
+              "https://yellow-turkeys-turn.loca.lt/job/job1/lastBuild/api/json" | jq -r '.result')
 
             echo "Jenkins Job Status: $JOB_STATUS"
 
